[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Python project containing 5 console games"
authors = ["procoview <simon10-00@mail.ru>"]
repository = "https://github.com/procoview/python-project-49"
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Development Status :: 6 - Mature",
    "Operating System :: Unix",
    "Topic :: Games/Entertainment :: Puzzle Games"
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
